force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/PBS_gBUILD_PBuildingScopeSystem__c.object-meta.xml
<CustomObject>
    <description>gBUILD PBuilding Scope System: Summary level information for a scope</description>
    <label>gBUILD Scope System</label>
    <nameField>
        <displayFormat>gbSs_{00000}</displayFormat>
        <label>PBSgBUILDSS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>gBUILD Scope Systems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>