force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ActualUtilitySav__c.field-meta.xml
<CustomField>
    <fullName>ActualUtilitySav__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Actual savings when calculated at a scope system level</description>
    <inlineHelpText>Actual savings when calculated at a scope system level</inlineHelpText>
    <label>Utility Savings Actual</label>
    <referenceTo>PBS_gBUILD_UtilitySavings__c</referenceTo>
    <relationshipLabel>gBUILD Scope Systems (Utility Savings Actual)</relationshipLabel>
    <relationshipName>gBUILD_Scope_Systems</relationshipName>
    <type>Lookup</type>
</CustomField>