force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/AdvMeteringConnectedBas__c.field-meta.xml
<CustomField>
    <fullName>AdvMeteringConnectedBas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Advanced Metering connected to the BAS</description>
    <inlineHelpText>Select the checkbox if advanced metering is connected to the Building Automation System (BAS).</inlineHelpText>
    <label>Advanced Meters Interfaced with BAS</label>
    <type>Checkbox</type>
</CustomField>