force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/AdvMeters__c.field-meta.xml
<CustomField>
    <fullName>AdvMeters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Advanced Meters</description>
    <inlineHelpText>Select the checkbox if the building had advanced meters prior to project start.</inlineHelpText>
    <label>Advanced Meters In Place Prior To Start</label>
    <type>Checkbox</type>
</CustomField>