force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/AnnualEnergyProductionEffEst__c.field-meta.xml
<CustomField>
    <fullName>AnnualEnergyProductionEffEst__c</fullName>
    <description>Annual Energy Production Efficiency Estimates</description>
    <inlineHelpText>Please provide the expected annual energy production (kWh/year) for new wind installations.</inlineHelpText>
    <label>Annual Energy Production (kWh/yr.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>