force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/AnnualSysProduction__c.field-meta.xml
<CustomField>
    <fullName>AnnualSysProduction__c</fullName>
    <description>Annual System Production of Biomass</description>
    <inlineHelpText>Please enter the anticipated annual biomass system production (Btu).</inlineHelpText>
    <label>Annual System Production (Btu)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>