force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/AnticipatedLightingPowerDensity__c.field-meta.xml
<CustomField>
    <fullName>AnticipatedLightingPowerDensity__c</fullName>
    <description>Please provide the anticipated lighting power density (watts per square foot) for the whole building, if available. Note that the anticipated power density for just the affected space is entered separately, under &apos;Step 3: Lighting Spaces&apos; below.</description>
    <inlineHelpText>Please provide the anticipated lighting power density (watts per square foot) for the whole building, if available. Note that the anticipated power density for just the affected space is entered separately, under &apos;Step 3: Lighting Spaces&apos; below.</inlineHelpText>
    <label>Anticipated Power Density (Watts/Sq Ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>