force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/AppliancePlugLoadReductions__c.field-meta.xml
<CustomField>
    <fullName>AppliancePlugLoadReductions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Appliance Plug-Load Reductions</description>
    <inlineHelpText>Select the checkbox if a plug-load reduction strategy or system is included in the project building scope.</inlineHelpText>
    <label>Appliance Plug-Load Reduction Strategy</label>
    <type>Checkbox</type>
</CustomField>