force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/AverageWindSpeedArea__c.field-meta.xml
<CustomField>
    <fullName>AverageWindSpeedArea__c</fullName>
    <description>Average Wind Speed of Area</description>
    <inlineHelpText>Please enter the average wind speed (mph) of geographic area.</inlineHelpText>
    <label>Average Wind Speed (mph)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>