force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/Bas__c.field-meta.xml
<CustomField>
    <fullName>Bas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if BAS</description>
    <inlineHelpText>Select the checkbox if the project is integrating the Building Automation System (BAS) into the Smart Building system.</inlineHelpText>
    <label>Building Automation System (BAS)</label>
    <type>Checkbox</type>
</CustomField>