force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/BaselineLightingPowerDensity__c.field-meta.xml
<CustomField>
    <fullName>BaselineLightingPowerDensity__c</fullName>
    <description>Baseline lighting power density, before this scope is applied</description>
    <inlineHelpText>Please provide the baseline lighting power density (watts per square foot) prior to the relighting applications for the building.</inlineHelpText>
    <label>Baseline Power Density (Watts/Sq Ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>