force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/BasInterfaceLighting__c.field-meta.xml
<CustomField>
    <fullName>BasInterfaceLighting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if BAS Interface with Lighting</description>
    <inlineHelpText>Select checkbox if the buildings Lighting system will be interfaced with the buildings BAS as part of the project scope.</inlineHelpText>
    <label>Lighting Interfaced with BAS</label>
    <type>Checkbox</type>
</CustomField>