force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/BiLevelSwitching__c.field-meta.xml
<CustomField>
    <fullName>BiLevelSwitching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Bi-Level Switching</description>
    <inlineHelpText>Select checkbox if bi-level lighting controls are included in the project building scope. Bi-level outdoor lighting controls will switch to a lower, energy saving light level (high to low or low to high) depending on space occupancy.</inlineHelpText>
    <label>Bi-Level Switching</label>
    <type>Checkbox</type>
</CustomField>