force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/BlowerDoorTest__c.field-meta.xml
<CustomField>
    <fullName>BlowerDoorTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Blower Door Test</description>
    <inlineHelpText>Select the checkbox if a blower door test is included in project building scope. A blower door test is a test conducted to determine air tightness levels within a building.</inlineHelpText>
    <label>Blower Door Test</label>
    <type>Checkbox</type>
</CustomField>