force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/BoilerCnt__c.field-meta.xml
<CustomField>
    <fullName>BoilerCnt__c</fullName>
    <description>Number of boilers being installed</description>
    <inlineHelpText>Enter the number of boilers being installed for this project.</inlineHelpText>
    <label>Number of Boilers</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>