force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/BoilerCntrlsUpgType__c.field-meta.xml
<CustomField>
    <fullName>BoilerCntrlsUpgType__c</fullName>
    <description>Boiler Controls Upgrade Type</description>
    <inlineHelpText>If the boiler controls will be upgraded as part of the project building scope, please select the type of upgrade (Building Automation System (BAS) controls or fuel controls).</inlineHelpText>
    <label>Type of Boiler Controls Upgrade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BasControls</fullName>
            </value>
            <value>
                <fullName>FuelControls</fullName>
            </value>
            <value>
                <fullName>BasControlsOrFuelControls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>