force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/BoilerDecentralization__c.field-meta.xml
<CustomField>
    <fullName>BoilerDecentralization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Boiler Decentralization</description>
    <inlineHelpText>Select the checkbox if boiler decentralization is included in project building scope.</inlineHelpText>
    <label>Boiler Decentralization</label>
    <type>Checkbox</type>
</CustomField>