force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/CardReaders__c.field-meta.xml
<CustomField>
    <fullName>CardReaders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Card Readers</description>
    <inlineHelpText>Select the checkbox if this project is integrating the card readers as part of the Smart Building Program.</inlineHelpText>
    <label>Card Readers</label>
    <type>Checkbox</type>
</CustomField>