force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/CaulkSealWindows__c.field-meta.xml
<CustomField>
    <fullName>CaulkSealWindows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Caulk Seal Windows</description>
    <inlineHelpText>Select the checkbox if the existing building windows will be caulked and/or sealed as part of the project building scope.</inlineHelpText>
    <label>Caulk/Seal Windows</label>
    <type>Checkbox</type>
</CustomField>