force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ChangeMoreFavorableRateSchedule__c.field-meta.xml
<CustomField>
    <fullName>ChangeMoreFavorableRateSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Change to More Favorable Rate Schedule</description>
    <inlineHelpText>Select the checkbox if the utility rate schedule will be adjusted to a more favorable rate schedule as part of the project building scope.</inlineHelpText>
    <label>Utility Rate Schedule Adjustments</label>
    <type>Checkbox</type>
</CustomField>