force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ChilledBeam__c.field-meta.xml
<CustomField>
    <fullName>ChilledBeam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select the checkbox if Chilled Beam is included in project building scope</description>
    <inlineHelpText>Select the checkbox if Chilled Beam is included in project building scope</inlineHelpText>
    <label>Chilled Beam</label>
    <type>Checkbox</type>
</CustomField>