force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ChillerCnt__c.field-meta.xml
<CustomField>
    <fullName>ChillerCnt__c</fullName>
    <description>Number of chillers</description>
    <inlineHelpText>Enter the number of chillers that will be installed in this project.</inlineHelpText>
    <label>Number of Chillers</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>