force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ChillH20Meters__c.field-meta.xml
<CustomField>
    <fullName>ChillH20Meters__c</fullName>
    <description>Number for Chillded Water</description>
    <inlineHelpText>Enter the number of meters that will be installed to monitor chilled water.</inlineHelpText>
    <label>Number of Chilled Water Meters</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>