force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ChillH20Tracked__c.field-meta.xml
<CustomField>
    <fullName>ChillH20Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for Chillded Water</description>
    <inlineHelpText>Select the checkbox if the installation of chilled water advanced meters is included in the project building scope.</inlineHelpText>
    <label>Chilled Water Meter(s) Installed</label>
    <type>Checkbox</type>
</CustomField>