force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ClerestoryIndoorGlazing__c.field-meta.xml
<CustomField>
    <fullName>ClerestoryIndoorGlazing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Clerestory/Indoor Glazing</description>
    <inlineHelpText>Select checkbox if clerestory or indoor glazing is included in the project building scope.</inlineHelpText>
    <label>Clerestory/Indoor Glazing</label>
    <type>Checkbox</type>
</CustomField>