force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/CogenerationSysInst__c.field-meta.xml
<CustomField>
    <fullName>CogenerationSysInst__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Cogeneration System Installation</description>
    <inlineHelpText>Select the checkbox if the installation of a cogeneration system is included in project building scope. A cogeneration system is a system that harnesses waste heat from a process and uses it to heat the building.</inlineHelpText>
    <label>Cogeneration System</label>
    <type>Checkbox</type>
</CustomField>