force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ComishBldgEnvelope__c.field-meta.xml
<CustomField>
    <fullName>ComishBldgEnvelope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Commissioning of Building Envelope (spray test...etc.)</description>
    <inlineHelpText>Select the checkbox if commissioning of building envelope (spray test, etc.) is included in project building scope.</inlineHelpText>
    <label>Building Envelope</label>
    <type>Checkbox</type>
</CustomField>