force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ComishElectricalSysAutomation__c.field-meta.xml
<CustomField>
    <fullName>ComishElectricalSysAutomation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Commissioning of Electrical Systems and Automation (Includes Renewables)</description>
    <inlineHelpText>Select the checkbox if commissioning electrical systems and automation (including renewables) is included in project building scope.</inlineHelpText>
    <label>Electric System/Automation</label>
    <type>Checkbox</type>
</CustomField>