force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ComishExteriorPlumbingSysAutomation__c.field-meta.xml
<CustomField>
    <fullName>ComishExteriorPlumbingSysAutomation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Commissioning of Exterior Plumbing Systems and Automation</description>
    <inlineHelpText>Select the checkbox if commissioning of exterior plumbing systems and automation is included in project building scope.</inlineHelpText>
    <label>Exterior Plumbing System/Automation</label>
    <type>Checkbox</type>
</CustomField>