force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ComishFireSuppressionAlarmSys__c.field-meta.xml
<CustomField>
    <fullName>ComishFireSuppressionAlarmSys__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Commissioning of Fire Suppression and Alarm System</description>
    <inlineHelpText>Select the checkbox if commissioning of fire suppression and alarm system is included in project building scope.</inlineHelpText>
    <label>Fire Suppression/Alarm System</label>
    <type>Checkbox</type>
</CustomField>