force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ComishHvacAutomation__c.field-meta.xml
<CustomField>
    <fullName>ComishHvacAutomation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Commissioning of HVAC and Automation</description>
    <inlineHelpText>Select the checkbox if commissioning of HVAC and automation is included in project building scope.</inlineHelpText>
    <label>HVAC and Automation</label>
    <type>Checkbox</type>
</CustomField>