force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ComishInteriorPlumbingSysAutomation__c.field-meta.xml
<CustomField>
    <fullName>ComishInteriorPlumbingSysAutomation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Commissioning of Interior Plumbing Systems and Automation</description>
    <inlineHelpText>Select the checkbox if commissioning of interior plumbing systems and automation is included in project building scope.</inlineHelpText>
    <label>Interior Plumbing System/Automation</label>
    <type>Checkbox</type>
</CustomField>