force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ComishLightingSysAutomation__c.field-meta.xml
<CustomField>
    <fullName>ComishLightingSysAutomation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Commissioning of Lighting System and Automation</description>
    <inlineHelpText>Select the checkbox if commissioning of lighting system and automation is included in project building scope.</inlineHelpText>
    <label>Lighting System/Automation</label>
    <type>Checkbox</type>
</CustomField>