force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/CondensateCollection__c.field-meta.xml
<CustomField>
    <fullName>CondensateCollection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Condensate Collection</description>
    <inlineHelpText>Select the checkbox if condensate collection is included in the project building scope.</inlineHelpText>
    <label>Condensate Collection</label>
    <type>Checkbox</type>
</CustomField>