force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/CondensateRecovery__c.field-meta.xml
<CustomField>
    <fullName>CondensateRecovery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Condensate Recovery</description>
    <inlineHelpText>Select the checkbox if condensate recovery is included in the project building scope. Condensate recovery is a process involving the recovery and reuse of condensate discharged from a steam system to save energy and resources.</inlineHelpText>
    <label>Condensate Recovery</label>
    <type>Checkbox</type>
</CustomField>