force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ConnectAdvMeteringBas__c.field-meta.xml
<CustomField>
    <fullName>ConnectAdvMeteringBas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Connect Advanced Metering to the BAS</description>
    <inlineHelpText>Select the checkbox if the buildings advanced meters will be connected to the local Building Automation System (BAS) system as part of this project building scope.</inlineHelpText>
    <label>Advanced Meters Interfaced w/ Local BAS</label>
    <type>Checkbox</type>
</CustomField>