force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/CoolingTowerMeter__c.field-meta.xml
<CustomField>
    <fullName>CoolingTowerMeter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select the checkbox if a cooling tower meter is included in project building scope.</description>
    <inlineHelpText>Select the checkbox if a cooling tower meter is included in project building scope.</inlineHelpText>
    <label>Cooling Tower Meter</label>
    <type>Checkbox</type>
</CustomField>