force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/Dali__c.field-meta.xml
<CustomField>
    <fullName>Dali__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if DALI</description>
    <inlineHelpText>Select the checkbox if a Digital Addressable Lighting Interface (DALI) is included in project building scope.</inlineHelpText>
    <label>Digital Addressable Lighting Interface</label>
    <type>Checkbox</type>
</CustomField>