force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/DaylightHarvestingSensors__c.field-meta.xml
<CustomField>
    <fullName>DaylightHarvestingSensors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Daylight Harvesting Sensors</description>
    <inlineHelpText>Select checkbox if daylight harvesting sensors are included in project building scope.</inlineHelpText>
    <label>Daylight Harvesting Sensors</label>
    <type>Checkbox</type>
</CustomField>