force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/DelampVendingMachines__c.field-meta.xml
<CustomField>
    <fullName>DelampVendingMachines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Delamp Vending Machines</description>
    <inlineHelpText>Select checkbox if the delamping of vending machines is included in project building scope. Vending machines with the advertising lights delamped reduce energy consumption and reduce vending machine costs.</inlineHelpText>
    <label>Delamp Vending Machines</label>
    <type>Checkbox</type>
</CustomField>