force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/DemandResponseProgram__c.field-meta.xml
<CustomField>
    <fullName>DemandResponseProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Demand Response Program</description>
    <inlineHelpText>Indicates if building is participating in a Demand Response Program.</inlineHelpText>
    <label>Demand Response Program</label>
    <type>Checkbox</type>
</CustomField>