force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/DescopedAt__c.field-meta.xml
<CustomField>
    <fullName>DescopedAt__c</fullName>
    <description>The date this item was descoped</description>
    <inlineHelpText>The date this item was descoped</inlineHelpText>
    <label>Descoped At</label>
    <type>Date</type>
</CustomField>