force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/DescopingReason__c.field-meta.xml
<CustomField>
    <fullName>DescopingReason__c</fullName>
    <description>The reason this item was descoped</description>
    <inlineHelpText>Please provide an explanation or reason for de-scoping or cancelling this reported scope item (such as cost, availability, change orders or design changes).</inlineHelpText>
    <label>Please Explain The Reason For Descoping</label>
    <length>32767</length>
    <type>LongTextArea</type>
</CustomField>