force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/DigitalBallastsAndOrDigitalCntrls__c.field-meta.xml
<CustomField>
    <fullName>DigitalBallastsAndOrDigitalCntrls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Digital Ballasts and/or Digital Controls</description>
    <inlineHelpText>Select checkbox if installation of digital ballasts and/or digital controls are included in project building scope.</inlineHelpText>
    <label>Digital Ballasts or Digital Controls</label>
    <type>Checkbox</type>
</CustomField>