force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/DominantType__c.field-meta.xml
<CustomField>
    <fullName>DominantType__c</fullName>
    <description>Dominant Type for wells</description>
    <inlineHelpText>Select if the well is heating or cooling dominant and the associated system.</inlineHelpText>
    <label>Dominant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ChillerInstallationForNewBuilding</fullName>
            </value>
            <value>
                <fullName>ChillerReplInKindWithSimilarTonnage</fullName>
            </value>
            <value>
                <fullName>ChillerReplacementWithDifferentTonnage</fullName>
            </value>
            <value>
                <fullName>ChillerSupplementalChiller</fullName>
            </value>
            <value>
                <fullName>GeothermalCoolingDominant</fullName>
            </value>
            <value>
                <fullName>GeothermalHeatingDominant</fullName>
            </value>
            <value>
                <fullName>PvBuildingIntegrated</fullName>
            </value>
            <value>
                <fullName>PvGroundMounted</fullName>
            </value>
            <value>
                <fullName>PvRoofMounted</fullName>
            </value>
            <value>
                <fullName>RoofNewCoolReflectiveRoof</fullName>
            </value>
            <value>
                <fullName>RoofVegetative</fullName>
            </value>
            <value>
                <fullName>RoofVegetative,NewCoolReflectiveRoof</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>