force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EcmActualCost__c.field-meta.xml
<CustomField>
    <fullName>EcmActualCost__c</fullName>
    <description>Actual cost ($).</description>
    <inlineHelpText>Actual cost ($).</inlineHelpText>
    <label>Actual Cost ($)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>