force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EcmAnticipatedCost__c.field-meta.xml
<CustomField>
    <fullName>EcmAnticipatedCost__c</fullName>
    <description>Anticipated cost ($).</description>
    <inlineHelpText>Anticipated cost ($).</inlineHelpText>
    <label>Anticipated Cost ($)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>