force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EcmCsiCode__c.field-meta.xml
<CustomField>
    <fullName>EcmCsiCode__c</fullName>
    <description>The CSI Code.</description>
    <inlineHelpText>The CSI Code.</inlineHelpText>
    <label>CSI Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>