force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EcmId__c.field-meta.xml
<CustomField>
    <fullName>EcmId__c</fullName>
    <description>The sequential ID for this ECM within this project building.</description>
    <inlineHelpText>The sequential ID for this ECM within this project building.</inlineHelpText>
    <label>ECM #</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>