force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EcmImplemented__c.field-meta.xml
<CustomField>
    <fullName>EcmImplemented__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this ECM implemented?</description>
    <inlineHelpText>Was this ECM implemented?</inlineHelpText>
    <label>Implementated (Y/N)</label>
    <type>Checkbox</type>
</CustomField>