force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ElecMeters__c.field-meta.xml
<CustomField>
    <fullName>ElecMeters__c</fullName>
    <description>Number for electricity</description>
    <inlineHelpText>Enter the number of advanced meters that will be installed to monitor electricity as part of the project building scope.</inlineHelpText>
    <label>Number of Electric Advanced Meters</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>