force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ElecTracked__c.field-meta.xml
<CustomField>
    <fullName>ElecTracked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for electricity</description>
    <inlineHelpText>Select the checkbox if the installation of electric advanced meters is included in the project building scope.</inlineHelpText>
    <label>Electric Meters Installed</label>
    <type>Checkbox</type>
</CustomField>