force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/Elevators__c.field-meta.xml
<CustomField>
    <fullName>Elevators__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Elevators</description>
    <inlineHelpText>Select the checkbox if this project is integrating elevators into the Smart Building Program.</inlineHelpText>
    <label>Elevators</label>
    <type>Checkbox</type>
</CustomField>