force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EmrggenfuelMeters__c.field-meta.xml
<CustomField>
    <fullName>EmrggenfuelMeters__c</fullName>
    <description>Number for emergency generator fuel oil supply</description>
    <inlineHelpText>Enter the number of meters that will be installed to monitor emergency generator fuel oil supply.</inlineHelpText>
    <label>Number of Emer. Gen Fuel Oil Meters</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>