force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EmrggenfuelTracked__c.field-meta.xml
<CustomField>
    <fullName>EmrggenfuelTracked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox for emergency generator fuel oil supply</description>
    <inlineHelpText>Select the checkbox if the installation of emergency generation fuel oil advanced meters is included in the project building scope.</inlineHelpText>
    <label>Emer. Gen Fuel Oil Meter Installed</label>
    <type>Checkbox</type>
</CustomField>