force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EnergyCostReducThroughRateAdj__c.field-meta.xml
<CustomField>
    <fullName>EnergyCostReducThroughRateAdj__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Energy Cost Reduction Through Rate Adjustments</description>
    <inlineHelpText>Select the checkbox if the project will result in lower utility cost rates for this building.</inlineHelpText>
    <label>Utility Rate Adjustments</label>
    <type>Checkbox</type>
</CustomField>