force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EnergyRecovery__c.field-meta.xml
<CustomField>
    <fullName>EnergyRecovery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if With Energy Recovery</description>
    <inlineHelpText>Select the checkbox if the DOAS is installed with energy recovery.</inlineHelpText>
    <label>DOAS with Energy Recovery</label>
    <type>Checkbox</type>
</CustomField>