force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EnergyReductionProgram__c.field-meta.xml
<CustomField>
    <fullName>EnergyReductionProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Energy Reduction Program</description>
    <inlineHelpText>Select the checkbox if an energy reduction program is included in the project building scope.</inlineHelpText>
    <label>Energy Reduction Program</label>
    <type>Checkbox</type>
</CustomField>