force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EnergyServiceBillingMeterAuditingRecs__c.field-meta.xml
<CustomField>
    <fullName>EnergyServiceBillingMeterAuditingRecs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Energy Service Billing and Meter Auditing Recommendations</description>
    <inlineHelpText>Select the checkbox if energy service billing and meter auditing recommendations are included in project building scope.</inlineHelpText>
    <label>Energy Service Billing/Meter Audit Recs</label>
    <type>Checkbox</type>
</CustomField>