force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EnergystarProducts__c.field-meta.xml
<CustomField>
    <fullName>EnergystarProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if EnergyStar Products</description>
    <inlineHelpText>Select the checkbox if ENERGY STAR products are included in project building scope.</inlineHelpText>
    <label>ENERGY STAR Products</label>
    <type>Checkbox</type>
</CustomField>