force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/EnhComish__c.field-meta.xml
<CustomField>
    <fullName>EnhComish__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Enhanced Commissioning</description>
    <inlineHelpText>Select the checkbox if enhanced commissioning is included in project building scope.</inlineHelpText>
    <label>Enhanced Commissioning</label>
    <type>Checkbox</type>
</CustomField>