force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExhaustAirHeatExchanger__c.field-meta.xml
<CustomField>
    <fullName>ExhaustAirHeatExchanger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Exhaust Air Heat Exchanger</description>
    <inlineHelpText>Select the checkbox if exhaust air heat exchanger is included in project building scope.</inlineHelpText>
    <label>Exhaust Air Heat Exchanger</label>
    <type>Checkbox</type>
</CustomField>