force-app/main/default/objects/PBS_gBUILD_PBuildingScopeSystem__c/fields/ExistToilets02Gpf__c.field-meta.xml
<CustomField>
    <fullName>ExistToilets02Gpf__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if Existing 0 To 2 GPF Toilets</description>
    <inlineHelpText>Select the checkbox if building&apos;s existing toilets measure greater than or equal to 0 and less than 3 GPF (gallons per flush).</inlineHelpText>
    <label>Existing Toilets =&gt;0 GPF and &lt;3 GPF</label>
    <type>Checkbox</type>
</CustomField>